spent hours on this one - z-index issue on mobile + when toggling hotspots, z-index got wacky and hotspots would not display - ONLY if another chapter module is present

--- a/src/packages/modules/editorial-chapters-e5/css/_responsive-editorial-chapters-e5.scss
+++ b/src/packages/modules/editorial-chapters-e5/css/_responsive-editorial-chapters-e5.scss
@@ -305,7 +305,10 @@ $tabletMax: px-em(979);
       .editorial-chapters-container,
       .editorial-carousel-wrapper {
         overflow: visible;
-        z-index: 1050;
+
+        .editorial-carousel-slide.active {
+          z-index: auto;
+        }
       }
       .thumb-nav {
         position: static;
